--- a/src/components/Card/card-style.css
+++ b/src/components/Card/card-style.css
@@ -1,10 +1,11 @@
 .product {
   background-color: white;
-  padding: 7%;
-  max-width: 300px;
-  max-height: 429px;
+  padding: 5%;
+  max-width: 250px;
+  height: 429px;
   display: grid;
-  grid-template-rows: 70% 1fr;
+  grid-template-rows: 60% 1fr auto;
+  row-gap: 3%;
   border-radius: 7px;
   transition: box-shadow 0.1s;
 }
@@ -22,4 +23,52 @@
 }
 .product__footer {
   align-self: end;
+}
+.product__footer p {
+  font-size: medium;
+  font-weight: bold;
+}
+.product__buttons {
+  --font-size-buttons: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.product__buttons a {
+  --color1: rgb(211, 183, 23);
+  --color2: white;
+  flex-grow: 1;
+  text-decoration: none;
+  border-style: none;
+  text-align: center;
+  font-size: var(--font-size-buttons);
+  padding: 7px 0;
+  background-color: var(--color2);
+  border: solid 1px var(--color1);
+  color: var(--color1);
+  border-radius: 5px;
+  margin-right: 7px;
+  transition: all 0.1s;
+}
+.product__buttons a:hover {
+  background-color: var(--color1);
+  color: var(--color2);
+}
+.product__buttons button {
+  --color1: rgb(36, 149, 68);
+  --color2: white;
+  flex-grow: 0.5;
+  border-style: none;
+  text-align: center;
+  font-size: var(--font-size-buttons);
+  background-color: var(--color2);
+  border: solid 1px var(--color1);
+  color: var(--color1);
+  border-radius: 5px;
+  margin-left: 7px;
+  transition: all 0.1s;
+  cursor: pointer;
+}
+.product__buttons button:hover {
+  background-color: var(--color1);
+  color: var(--color2);
 }
