--- a/src/components/SearchBar/search-bar-style.css
+++ b/src/components/SearchBar/search-bar-style.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   margin: 3vh auto;
+  margin-bottom: 0;
   background-color: white;
   border-radius: 30px;
 }
