--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+}
 :root {
   --header-height: 13vh;
-}
-.general__container {
-  background-color: #f0f0f0;
-  min-height: 150vh;
-  margin-top: var(--header-height);
-}
-.cards__container {
-  width: 90vw;
-  margin: 0 auto;
-  padding: 15px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  --color1: #02aff3;
+  --color2: white;
+  --color3: #249544;
 }
