--- a/src/components/Card/card-style.css
+++ b/src/components/Card/card-style.css
@@ -1,32 +1,49 @@
-.product {
-  background-color: white;
-  padding: 5%;
-  height: 400px;
+.cards__container {
+  width: 90vw;
+  margin: 0 auto;
+  padding: 15px;
   display: grid;
-  grid-template-rows: 60% 1fr auto;
-  row-gap: 3%;
-  border-radius: 7px;
-  transition: box-shadow 0.1s;
+  grid-template-columns: repeat(4, auto);
+  justify-content: space-between;
+  row-gap: 17px;
+}
+.product {
+  background-color: #ffffff;
+  padding: 10px;
+  height: 390px;
+  width: 250px;
+  display: grid;
+  grid-template-rows: 63% 1fr auto;
+  row-gap: 7px;
+  border-radius: 5px;
+  transition: all 0.24s;
+  transition-delay: 0.13s;
 }
 .product:hover {
-  box-shadow: 3px 3px 7px #00000039;
+  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.7);
 }
 .product figure {
-  height: 100%;
-  margin: 0;
   display: flex;
-  justify-content: flex-start;
+  height: 100%;
+  justify-content: center;
+  overflow-y: hidden;
 }
 .image__container img {
   width: 100%;
   object-fit: contain;
 }
 .product__footer {
-  align-self: end;
-}
-.product__footer p {
-  font-size: medium;
+  display: flex;
+  flex-direction: column;
+  color: var(--color3);
   font-weight: bold;
+}
+.product__footer--name {
+  color: var(--color1);
+  flex-grow: 1;
+}
+.product__footer span {
+  font-weight: lighter;
 }
 .product__buttons {
   --font-size-buttons: 15px;
@@ -36,37 +53,33 @@
   border-style: none;
 }
 .product__buttons a {
-  --color1: rgb(211, 183, 23);
-  --color2: white;
   flex-grow: 1;
   text-decoration: none;
   font-size: var(--font-size-buttons);
   padding: 7px 0;
-  background-color: var(--color2);
+  background-color: inherit;
   border: solid 1px var(--color1);
   color: var(--color1);
   border-radius: 5px;
   margin-right: 7px;
-  transition: all 0.1s;
+  transition: all 0.2s;
 }
 .product__buttons a:hover {
   background-color: var(--color1);
   color: var(--color2);
 }
 .product__buttons button {
-  --color1: rgb(36, 149, 68);
-  --color2: white;
   flex-grow: 0.5;
   font-size: var(--font-size-buttons);
-  background-color: var(--color2);
-  border: solid 1px var(--color1);
-  color: var(--color1);
+  background-color: inherit;
+  border: solid 1px var(--color3);
+  color: var(--color3);
   border-radius: 5px;
   margin-left: 7px;
-  transition: all 0.1s;
+  transition: all 0.2s;
   cursor: pointer;
 }
 .product__buttons button:hover {
-  background-color: var(--color1);
+  background-color: var(--color3);
   color: var(--color2);
 }
