--- a/src/components/Header/header-style.css
+++ b/src/components/Header/header-style.css
@@ -1,15 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-}
 .header {
   width: 100vw;
   height: var(--header-height);
   color: white;
+  top: 0;
   font-weight: 700;
   background-color: rgb(34, 34, 34);
   position: fixed;
@@ -25,14 +18,20 @@
   font-size: xx-large;
 }
 .header div p span {
-  color: rgb(211, 183, 23);
+  color: var(--color1);
 }
 .header div figure {
   padding: 0 0.5vw;
   display: flex;
   align-items: center;
 }
+.header div figure p {
+  align-self: start;
+  margin-top: 13px;
+  color: var(--color1);
+}
 .header div figure img {
+  cursor: pointer;
   height: calc(var(--header-height) - 5vh);
   object-fit: contain;
 }
