--- a/src/components/Containers/general-conatiner.css
+++ b/src/components/Containers/general-conatiner.css
@@ -1,9 +1,9 @@
 .general__container {
-  min-height: 150vh;
+  min-height: 100vh;
   padding-top: var(--header-height);
-  background-image: linear-gradient(to bottom, var(--color1), #00000080),
-    url(/public//assets/tecno-wallpaper.jpg);
+  background-color: #e3e6e6;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  z-index: 0;
 }
