--- a/src/components/Card/card-details.css
+++ b/src/components/Card/card-details.css
@@ -26,8 +26,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #b63f29;
-  border: solid 1px #b63f29;
+  background-color: var(--color5);
+  border: solid 1px var(--color5);
   border-radius: 5px;
   transition: all 0.2s;
 
