--- a/src/components/EditSection/cardCreateSection.css
+++ b/src/components/EditSection/cardCreateSection.css
@@ -1,51 +1,76 @@
+.input-empty {
+  outline: 1px solid red;
+  border-radius: 3px;
+  padding: 0px 37px;
+}
 .createSectionContainer {
   width: 100vw;
   min-height: 100vh;
-  background-color: #f1f1f1;
-  padding: 5vw;
+  background-color: hsl(0, 0%, 93%);
+  padding: 0.5vw 2vw;
+  overflow: hidden;
 }
 .createSectionEditZone {
   display: flex;
-  height: 460px;
+  height: 400px;
   width: 100%;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 .createSection--title {
-  color: #000f21;
+  color: #00224c;
+  width: 100%;
+  font-size: 43px;
+  margin-bottom: 7px;
 }
 .createSection--form {
-  overflow-y: scroll;
-  height: 100%;
-  padding-bottom: 40px;
-  width: 45%;
+  height: 70vh;
+  width: 57%;
+  display: grid;
+  grid-template-columns: min-content auto;
+  align-items: center;
+}
+.createSection--form :nth-child(2n) {
+  font-size: 17px;
+  border-top-right-radius: 37px;
+  padding-right: 13px;
+}
+
+.createSection--form :nth-child(2n + 1) {
+  padding-right: 7px;
+  padding-left: 3px;
+  font-weight: bold;
+  height: 17px;
+  justify-self: end;
 }
 .createSection--form__element {
+  padding: 6px 7px;
   border-style: none;
   width: 100%;
-  padding: 3px;
+  height: min-content;
+  border-radius: 3px;
+  transition: all 0.2s;
 }
 .createSection--form__element:focus {
   outline: none;
-  border-bottom: 1px solid #000000;
 }
-.createSection--form__goDown {
-  position: absolute;
-  width: 45%;
-  height: 37px;
-  top: 423px;
-  background-color: #dedede;
+
+#fileInput {
+  display: none;
 }
-.createSection--form__goDown img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
+
+.uploadArchive--figure {
+  cursor: pointer;
+  user-select: none;
 }
+
 .createSection--cardView {
   display: flex;
   flex-direction: column;
-  width: 45%;
+  justify-content: flex-end;
+  width: 237px;
   height: 100%;
+  margin: 0 auto;
 }
 .cardCreateSection--container {
   width: 100%;
@@ -59,29 +84,31 @@
   top: 0;
 }
 .createSection--controls {
-  margin-top: auto;
+  margin-top: -30px;
+  width: 57%;
+  min-height: 30px;
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
-  height: 90px;
+  flex-direction: row-reverse;
 }
 .createSection--controls__element {
-  height: 30%;
+  width: 31%;
+  max-width: 127px;
+  margin: 0 auto;
+  padding: 3px;
   border: none;
   border-radius: 7px;
+  transition: all 0.2s;
   cursor: pointer;
   user-select: none;
-  width: 80%;
-  margin: 0 auto;
-  transition: all 0.2s;
 }
 .createSection--controls__element:nth-child(1) {
   color: #ffffff;
-  background-color: #db0f0f;
+  background-color: #01bb1d;
 }
 .createSection--controls__element:nth-child(2) {
   color: #ffffff;
-  background-color: #01bb1d;
+  background-color: #db0f0f;
 }
 .createSection--controls__element:nth-child(3) {
   color: #ffffff;
