--- a/src/components/Header/shop-cart.css
+++ b/src/components/Header/shop-cart.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  border-bottom-left-radius: 5px;
 }
 .shopCart--paid {
   margin: 17px auto;
