--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,10 @@
   .cardEdit__container {
     left: calc(100% - 300px);
   }
-  .cards__container {
-    width: 91.5%;
+  .category--title {
+    margin-left: 0;
+  }
+  .category--container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
