--- a/src/components/Card/card-details.css
+++ b/src/components/Card/card-details.css
@@ -1,10 +1,10 @@
 .details {
   transform: rotateY(180deg);
   backface-visibility: hidden;
-  background-color: #f8f8f8;
+  background-color: #f9f9f9;
   width: 100%;
   height: 100%;
-  padding: 17px;
+  padding: 13px;
   position: absolute;
   display: grid;
   grid-template-areas:
@@ -14,6 +14,7 @@
     " back  back";
   transition: transform 0.3s;
   grid-template-columns: fill auto;
+  z-index: 3000;
   grid-template-rows: max-content max-content auto min-content;
 }
 
@@ -42,13 +43,12 @@
   grid-area: image;
   display: flex;
   align-self: center;
-  height: 100%;
-  max-width: 67px;
-  object-fit: cove;
+  width: 67px;
 }
 .details__image-container img {
   margin: auto 0;
   width: 100%;
+  max-height: 87px;
 }
 .details__product-title {
   font-weight: 900;
