--- a/src/components/Containers/general-conatiner.css
+++ b/src/components/Containers/general-conatiner.css
@@ -1,7 +1,7 @@
 .general__container {
   min-height: 100vh;
   padding-top: var(--header-height);
-  background-color: #e3e6e6;
+  background-color: #ffffff;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
