--- a/src/components/Card/card-style.css
+++ b/src/components/Card/card-style.css
@@ -20,6 +20,23 @@
   row-gap: 17px;
   margin-bottom: 24px;
 }
+
+.category--container .card,
+.category--title {
+  animation: reveal-default auto both;
+  animation-timeline: view();
+  animation-range: entry 10% cover 20%;
+}
+@keyframes reveal-default {
+  0% {
+    translate: 0 77px;
+    opacity: 0;
+  }
+  100% {
+    translate: 0 0;
+    opacity: 1;
+  }
+}
 .card {
   width: 90%;
   border-radius: 5px;
@@ -51,11 +68,12 @@
   background-color: var(--color4);
   border: solid 1px var(--color4);
   border-radius: 5px;
-  transition: all 0.2s;
+  transition: color 0.1s, background-color 0.1s;
   user-select: none;
   cursor: pointer;
 }
 .toDetails:hover {
+  transition: color 0.2s, background-color 0.2s;
   color: var(--color4);
   background-color: var(--product-background);
 }
@@ -119,17 +137,18 @@
   border: solid 1px var(--color3);
   border-radius: 777px;
   margin-left: 7px;
-  transition: all 0.2s;
   display: flex;
   justify-content: center;
   user-select: none;
   cursor: pointer;
+  transition: background-color 0.1s;
 }
 .product__buttons a img {
   height: 80%;
   margin: auto 0;
 }
 .product__buttons a:hover {
+  transition: background-color 0.2s;
   background-color: var(--product-background);
 }
 .product__buttons button {
@@ -144,7 +163,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: all 0.2s;
   user-select: none;
   cursor: pointer;
 }
