--- a/src/components/Header/header-style.css
+++ b/src/components/Header/header-style.css
@@ -1,12 +1,12 @@
 .header {
   z-index: 1900;
-  width: 100vw;
+  width: 100%;
   height: var(--header-height);
   color: #ffffff;
   top: 0;
   font-weight: 700;
   background-color: #000f21;
-  position: fixed;
+  position: sticky;
   display: flex;
   justify-content: space-between;
 }
@@ -18,14 +18,30 @@
   flex-grow: 1;
 }
 .header__text--color {
-  color: var(--color1);
+  color: #ffffff00;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 175, 243, 1) 0%,
+    rgb(114, 90, 255) 50%,
+    rgb(255, 0, 144) 100%
+  );
+  background-clip: text;
+  background-size: 1000% 100%;
+  animation: background-move 7s ease-in-out infinite alternate;
+}
+@keyframes background-move {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 100%;
+  }
 }
 .navBar__buttons {
   margin-right: 5vw;
   display: flex;
 }
 .header .navBar__buttons figure {
-  padding: 0 0.5vw;
   display: flex;
   align-items: center;
   user-select: none;
@@ -39,18 +55,39 @@
   color: var(--color1);
   font-size: small;
 }
-.header .navBar__buttons figure img {
+.svg--color {
   cursor: pointer;
-  height: calc(var(--header-height) - 5vh);
+
+  height: calc(var(--header-height) * 0.65);
+  width: calc(var(--header-height) * 0.65);
+
   object-fit: contain;
+  mask-repeat: no-repeat;
+  mask-size: contain;
+
+  background-image: linear-gradient(
+    90deg,
+    rgb(255, 0, 144) 0%,
+    rgb(114, 90, 255) 50%,
+    rgba(2, 175, 243, 1) 100%
+  );
+
+  background-size: 1000% 100%;
+  animation: background-move 7s ease-in-out infinite alternate;
 }
+.header .navBar__buttons figure:first-of-type .svg--color {
+  mask-image: url(/assets/login.svg);
+}
+.header .navBar__buttons figure:last-of-type .svg--color {
+  mask-image: url(/assets/shopping-cart.svg);
+}
+
 .userLogged--logo {
   height: calc(var(--header-height) * 0.55);
   aspect-ratio: 1/1;
   border-radius: 50%;
-  background-color: #333;
-  color: #dedede;
-  border: solid 1px #dedede;
+  border: solid 1px rgba(2, 175, 243, 1);
+  color: var(--color1);
   font-size: 20px;
   font-weight: bold;
   margin: auto 0.7vw;
