--- a/src/components/Containers/general-container.css
+++ b/src/components/Containers/general-container.css
@@ -1,5 +1,6 @@
 .general__container {
   min-height: 100vh;
+  padding-top: var(--header-height);
   background-color: #ffffff;
   background-size: cover;
   background-position: center;
