--- a/src/components/Header/header-style.css
+++ b/src/components/Header/header-style.css
@@ -6,17 +6,21 @@
   top: 0;
   font-weight: 700;
   background-color: #000f21;
-  position: sticky;
+  position: fixed;
   display: flex;
   justify-content: space-between;
 }
+
 .header__text {
-  margin-left: 5vw;
-  line-height: var(--header-height);
-  font-size: calc(var(--header-height) * 0.57);
   user-select: none;
-  flex-grow: 1;
+  margin-left: 5vw;
+  display: flex;
+  flex-grow: 0;
+  flex-direction: column;
+  justify-content: center;
+  font-size: calc(var(--header-height) * 0.57);
 }
+
 .header__text--color {
   color: #ffffff00;
   background: linear-gradient(
@@ -52,8 +56,19 @@
 .header .navBar__buttons figure p {
   align-self: start;
   margin-top: 20%;
-  color: var(--color1);
+  color: #ffffff00;
   font-size: small;
+  font-weight: 900;
+
+  background-image: linear-gradient(
+    90deg,
+    rgb(255, 0, 144) 0%,
+    rgb(114, 90, 255) 50%,
+    rgba(2, 175, 243, 1) 100%
+  );
+  background-clip: text;
+  background-size: 1000% 100%;
+  animation: background-move 7s ease-in-out infinite alternate;
 }
 .svg--color {
   cursor: pointer;
